<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/regiterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/defaultText"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/user_icon"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiterText"
        app:layout_constraintVertical_bias="0.11"
        tools:ignore="Autofill,UnusedAttribute" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/email_icon"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="Autofill,UnusedAttribute" />

    <TextView

        android:id="@+id/emailText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/locker_icon"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/password_insert"
        android:inputType="textPassword"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.106"
        tools:targetApi="m"
        tools:ignore="Autofill" />



    <TextView

        android:id="@+id/usernameText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="Nome de utilizador"
        app:layout_constraintBottom_toTopOf="@+id/usernameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regiterText" />

    <TextView

        android:id="@+id/passwordText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/passwordEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.681" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_primary_background"

        android:backgroundTint="@color/primary"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/criar_conta"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        app:layout_constraintVertical_bias="0.172" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="@string/haveAccount"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/loginHereTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/loginHere"
            android:textColor="@color/primary"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>