<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diogopereira.rackit.RegisterActivity">

<!--    <DatePicker-->
<!--        android:id="@+id/datePicker"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:background="@color/white"-->
<!--        android:datePickerMode="calendar"-->
<!--        android:translationZ="20dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->

<!--        app:layout_constraintHorizontal_bias="0.476"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.498" />-->

    <View
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />
    <TextView
        android:id="@+id/fragmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/adicionar_produto"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_view"
        app:layout_constraintEnd_toEndOf="@+id/navigation_view"
        app:layout_constraintStart_toStartOf="@+id/navigation_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragmentName"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />





    <TextView

        android:id="@+id/productText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/nome_do_produto"
        app:layout_constraintBottom_toTopOf="@+id/nomeProdutoEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nomeProdutoEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/introduza_o_nome_do_produto"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentName"
        app:layout_constraintVertical_bias="0.091"
        tools:ignore="Autofill,UnusedAttribute" />

    <TextView

        android:id="@+id/codBarrasText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/c_digo_de_barras"
        app:layout_constraintBottom_toTopOf="@+id/codBarrasEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeProdutoEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/codBarrasEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/introduza_o_c_digo_de_barras"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeProdutoEditText"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="Autofill,UnusedAttribute" />


    <TextView

        android:id="@+id/precoCompraText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/pre_o_de_compra"
        app:layout_constraintBottom_toTopOf="@+id/precoCompraEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codBarrasEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/precoCompraEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"

        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/introduza_o_pre_o_de_compra"
        android:inputType="numberDecimal"
        android:paddingStart="15dp"
        android:paddingEnd="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codBarrasEditText"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="Autofill"
        tools:targetApi="m" />




    <TextView

        android:id="@+id/dataValidadeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/data_de_validade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoCompraEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/dataValidadeEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorTextBlack"
        android:drawableEnd="@drawable/ic_calendar"
        android:fontFamily="@font/seg_ui_semibold"
        android:focusable="false"
        android:hint="Introduza a data de validade..."
        android:inputType="date"
        android:paddingStart="15dp"
        android:paddingEnd="26dp"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoCompraEditText"
        tools:ignore="Autofill"
        tools:targetApi="m" />

    <TextView

        android:id="@+id/imagemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="Imagem"
        app:layout_constraintBottom_toTopOf="@+id/imagemEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataValidadeEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/imagemEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_camera"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorTextBlack"
        android:fontFamily="@font/seg_ui_semibold"
        android:hint="@string/introduza_a_imagem"
        android:inputType="textUri"
        android:paddingStart="15dp"
        android:paddingEnd="26dp"
        android:focusable="false"
        android:textColor="@color/defaultText"
        android:textColorHint="@color/colorPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataValidadeEditText"
        tools:ignore="Autofill"
        tools:targetApi="m" />


    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/button_primary_background"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/seg_ui_semibold"
        android:text="@string/adicionar_produto"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemEditText"
        app:layout_constraintVertical_bias="0.333" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>